# ASIP

./: CMakeLists.txt  readme.txt
Core/: comp_list.h  comparators.h  defs.h  geometry.cpp  geometry.h  indexed_event.cpp  indexed_event.h  kinetic_model.cpp  kinetic_model.h  line_item.cpp  line_item.h  lsd_interface.cpp  lsd_interface.h  lsd_tuned.cpp  lsd_tuned.h  matrix.h  means.cpp  means.h  parameters.cpp  parameters.h  partition.cpp  partition.h  partition_elements.cpp  partition_elements.h  propagation.cpp  propagation.h  quadtree.h  quadtree_point.cpp  quadtree_point.h  r_angle.cpp  r_angle.h  r_ordinate.cpp  r_ordinate.h  refine_partition.cpp  refine_partition.h  regularization_angles.cpp  regularization_angles.h  regularization_angles_ms.cpp  regularization_angles_ms.h  regularization_ordinates.cpp  (+9 more)
Image-Vectorization/: interface.cpp  interface.h  interface.qrc  interface.ui  main.cpp  myqgraphicsview.cpp  myqgraphicsview.h  partition_refine.cpp  partition_refine.h  thread_master.cpp  thread_master.h  thread_worker.cpp  thread_worker.h
Image-Vectorization-Console/: args.cpp  args.h  image_vectorization_console.cpp  image_vectorization_console.h  main.cpp  read_ply_file.cpp  read_ply_file.h  tinyply.h
